<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atul.basic.ScrollingActivity">

 <!--   <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:clipChildren="true"
        android:titleTextColor="@color/color2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />  -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fadeScrollbars="true"
        android:id="@+id/scroll2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Awards and achievements"
                android:textAllCaps="true"
                android:textSize="35dp"
                android:textColor="@color/color4"
                android:layout_gravity="center"
                android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textSize="18dp"
        android:text="@string/awards" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textSize="18dp"
        android:text="@string/achieve2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="28dp"
                android:textAllCaps="true"
                android:textColor="@color/color4"
                android:text="@string/a7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="18dp"
                android:text="@string/achieve6" />
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.NestedScrollView>
