<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.atul.basic.MainActivity">
    <item
        android:id="@+id/display1"
        android:title="GALLERY"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="101"
        android:title="@string/action_settings5" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:menuCategory="container"/>

    <item
        android:id="@+id/display2"
        android:title="Sign-In"
        app:showAsAction="ifRoom"
        android:icon="@drawable/common_google_signin_btn_icon_dark_normal" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="103"
        android:checkable="false"
        android:title="@string/action_settings6"
        app:showAsAction="never" />

    <!--  <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first"
            android:title="First" />
        <item
            android:id="@+id/nav_second"
            android:title="Second" />
        <item
            android:id="@+id/nav_third"
            android:title="Third" />
    </group>   -->
</menu>
