<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.example.atul.basic.Main3Activity">


    <!-- <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/id1"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:clipChildren="true"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>  -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:clipChildren="true"
        android:titleTextColor="@color/color2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbars="none"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/toolbar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i6"
                android:textSize="20dp"
                android:textAllCaps="true"
                android:textColor="#ff00ff"
                android:textColorHighlight="@color/color1"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i1"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/i2"
                android:textAllCaps="true"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i3"
                android:textAllCaps="true" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:id="@+id/image3"
                android:src="@drawable/dravid"
                android:layout_weight="0.28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i4"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i5"
                android:textSize="25dp"
                android:textColorHighlight="@color/color2"
                android:textColor="@color/color3"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
